made a new branch

--- a/sections/header-new.liquid
+++ b/sections/header-new.liquid
@@ -1,4 +1,4 @@
-<div id="shopify-section-header" class="shopify-section">
+<div id="shopify-section-header" class="shopify-section" data>
 {% include 'search-drawer' %}
 <div data-section-id="{{ section.id }}" data-section-type="header-section" data-header-section>
   <header class="site-header border-bottom logo--left" role="banner">
