--- a/sections/hairfall-woe.liquid
+++ b/sections/hairfall-woe.liquid
@@ -151,7 +151,7 @@
 {% if product.metafields.custom.clinical_proof %}
  {% assign slides = product.metafields.custom.woe.value %}
 <div class='woe-container ' >
-  <img class='hair-fall-img' src='{{ slides.image }}' alt='{{ slides.alt }}' />
+  <img class='hair-fall-img' src='{{ slides.image }}' />
   <div class="hair-fall-div">
   <h4>{{ slides.title }}</h4>
   <p>{{ slides.description }} <br> <br> Try these if you:</p>
