--- a/sections/clinical-proof.liquid
+++ b/sections/clinical-proof.liquid
@@ -259,7 +259,7 @@
       <h6 style="margin-top:1rem;margin-bottom:0.5rem;">{{ common_slide.headline }}</h6>
       <div class='proof-wrapper page-width'>
         <div class='proof-img'>
-          <img src='{{ common_slide.image   }}' alt ='{{ common_slide.alt }}' />
+          <img src='{{ common_slide.image   }}' />
           <p>{{ common_slide.image_caption }}</p>
         </div>
         <p>{{ common_slide.description }}</p>
@@ -273,11 +273,11 @@
       <p>{{ slides.comparison_slide.subtitle }}</p>
       <div class='comparison-images'>
         <div class='before-wrapper'>
-          <img src='{{ slides.comparison_slide.image_before }}' alt='{{ slides.comparison_slide.alt_before }}' />
+          <img src='{{ slides.comparison_slide.image_before }}' alt='' />
           <p>Before</p>
         </div>
         <div class='after-wrapper'>
-          <img src='{{ slides.comparison_slide.image_after }}' alt='{{ slides.comparison_slide.alt_after }}' />
+          <img src='{{ slides.comparison_slide.image_after }}' alt='' />
           <p>After</p>
         </div>
       </div>
